--- a/.github/workflows/create-slide-pdf.yml
+++ b/.github/workflows/create-slide-pdf.yml
@@ -16,6 +16,7 @@ jobs:
       - name: create file list
         id: files_list
         run: |
+          mkdir output
           echo "::set-output name=files::$(printf '"%s" ' *.md)"
 
       - uses: docker://pandoc/latex:latest
