--- a/.github/workflows/create-slide-pdf.yml
+++ b/.github/workflows/create-slide-pdf.yml
@@ -27,7 +27,7 @@ jobs:
             -t beamer
             -V aspectratio=169
             -V linkcolor:blue
-            -V fontsize=14pt
+            -V fontsize=12pt
             -s
             --output=output/version-control-intro-slides.pdf
             version-control/material/intro_slides.md
@@ -38,10 +38,43 @@ jobs:
             -t beamer
             -V aspectratio=169
             -V linkcolor:blue
-            -V fontsize=14pt
+            -V fontsize=12pt
             -s
             --output=output/version-control-git-quiz.pdf
             version-control/material/git_quiz.md
+
+      - uses: docker://pandoc/latex:latest
+        with:
+          args: >-
+            -t beamer
+            -V aspectratio=169
+            -V linkcolor:blue
+            -V fontsize=12pt
+            -s
+            --output=output/organization-rse-basics.pdf
+            organization/material/rse_basics.md
+
+      - uses: docker://pandoc/latex:latest
+        with:
+          args: >-
+            -t beamer
+            -V aspectratio=169
+            -V linkcolor:blue
+            -V fontsize=12pt
+            -s
+            --output=output/organization-intro-course.pdf
+            organization/material/intro_course.md
+
+      - uses: docker://pandoc/latex:latest
+        with:
+          args: >-
+            -t beamer
+            -V aspectratio=169
+            -V linkcolor:blue
+            -V fontsize=12pt
+            -s
+            --output=output/organization-challenge-intro.pdf
+            organization/material/challenge_intro.md
 
       - uses: actions/upload-artifact@master
         with:
