--- a/.github/workflows/create-slide-pdf.yml
+++ b/.github/workflows/create-slide-pdf.yml
@@ -10,12 +10,11 @@ on:
   workflow_dispatch:
 
 jobs:
-  convert_via_pandoc:
+  create_slides:
     runs-on: ubuntu-20.04
     strategy:
       matrix:
         slides-markdown: [['version-control/material/intro_slides.md','version-control-intro-slides.pdf'], ['organization/material/rse_basics.md','organization-rse-basics.pdf'], ['organization/material/intro_course.md','organization-intro-course.pdf'], ['organization/material/challenge_intro.md','organization-challenge-intro.pdf']]
-        text-markdown: [ ['version-control/material/git_quiz.md','version-control-git-quiz.pdf'] ]
     steps:
       - uses: actions/checkout@v2
 
@@ -36,6 +35,23 @@ jobs:
             -s
             --output=slides/${{ matrix.slides-markdown[1] }}
             ${{ matrix.slides-markdown[0] }}
+      - uses: actions/upload-artifact@master
+        with:
+          name: slides
+          path: slides
+
+  create_texts:
+    runs-on: ubuntu-20.04
+    strategy:
+      matrix:
+        text-markdown: [ ['version-control/material/git_quiz.md','version-control-git-quiz.pdf'] ]
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: create file list
+        id: files_list
+        run: |
+          mkdir texts
 
       - uses: docker://pandoc/latex:latest
         with:
@@ -48,10 +64,10 @@ jobs:
             -V linkcolor:blue
             -V fontsize=10pt
             --listings
-            --output=slides/${{ matrix.text-markdown[1] }}
+            --output=texts/${{ matrix.text-markdown[1] }}
             ${{ matrix.text-markdown[0] }}
 
       - uses: actions/upload-artifact@master
         with:
-          name: slides
-          path: slides
+          name: texts
+          path: texts
