--- a/.github/workflows/create-slide-pdf.yml
+++ b/.github/workflows/create-slide-pdf.yml
@@ -12,33 +12,18 @@ on:
 jobs:
   create_slides:
     runs-on: ubuntu-20.04
-    strategy:
-      matrix:
-        slides-markdown: [['version-control/material/intro_slides.md','version-control-intro-slides.pdf'], ['organization/material/rse_basics.md','organization-rse-basics.pdf'], ['organization/material/intro_course.md','organization-intro-course.pdf'], ['organization/material/challenge_intro.md','organization-challenge-intro.pdf'], ['version-control/material/merge_rebase_slides.md','merge_rebase.pdf'], ['version-control/material/standards_slides.md','standards.pdf'], ['version-control/material/workflow_slides.md','workflow.pdf']]
+    container: pandoc/latex:latest
     steps:
-      - uses: actions/checkout@v2
-
-      - name: create file list
+      - name: Checkout repository
+        uses: actions/checkout@v2
+      - name: Compile PDFs
         id: files_list
         run: |
-          mkdir slides
-#          echo "::set-output name=files::$(printf '"%s" ' *.md)"
-
-      - uses: docker://pandoc/latex:latest
-        with:
-          args: >-
-            -t beamer
-            -V aspectratio=169
-            -V linkcolor:blue
-            -V fontsize=12pt
-            --listings
-            -s
-            --output=slides/${{ matrix.slides-markdown[1] }}
-            ${{ matrix.slides-markdown[0] }}
-      - uses: actions/upload-artifact@master
-        with:
-          name: slides
-          path: slides
+          bash scripts/create-slides.sh
+    - uses: actions/upload-artifact@master
+      with:
+        name: slides
+        path: slides
 
   create_texts:
     runs-on: ubuntu-20.04
