--- a/.github/workflows/create-slide-pdf.yml
+++ b/.github/workflows/create-slide-pdf.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Compile PDFs
         run: |
-          ./scripts/create-slides.sh
+          mkdir slides && ./scripts/create-slides.sh
       - uses: actions/upload-artifact@master
         with:
           name: slides
