--- a/.github/workflows/create-pdfs-from-markdown.yml
+++ b/.github/workflows/create-pdfs-from-markdown.yml
@@ -18,7 +18,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Compile PDFs (slides)
         run: |
-          ./scripts/create-slides.sh
+          ./scripts/create-pdf-from-markdown.sh slides
       - uses: actions/upload-artifact@master
         with:
           name: slides
@@ -26,7 +26,15 @@ jobs:
           retention-days: 14
       - name: Compile PDFs (texts)
         run: |
-          ./scripts/create-texts.sh
+          ./scripts/create-pdf-from-markdown.sh text
+      - uses: actions/upload-artifact@master
+        with:
+          name: texts
+          path: texts
+          retention-days: 14
+      - name: Compile PDFs (quizzes)
+        run: |
+          ./scripts/create-pdf-from-markdown.sh quiz
       - uses: actions/upload-artifact@master
         with:
           name: texts
