--- a/.github/workflows/create-pdfs-from-markdown.yml
+++ b/.github/workflows/create-pdfs-from-markdown.yml
@@ -14,6 +14,8 @@ jobs:
     runs-on: ubuntu-20.04
     container: pandoc/latex:latest
     steps:
+      - name: Install bash
+        run: apk add bash
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Compile PDFs (slides)
