[libraries and variables] update examples
- Make sure static vs. shared example uses main.cpp as dependency
- Move script for checking environment variables in own subdirectory to follow current directory structure.

--- a/building-and-packaging/material/examples/shared-and-static-c++/Makefile
+++ b/building-and-packaging/material/examples/shared-and-static-c++/Makefile
@@ -1,10 +1,10 @@
 
 all: shared static
 
-shared:
+shared: main.cpp
 	$(CXX) main.cpp -o main-shared
 
-static:
+static: main.cpp
 	$(CXX) -static main.cpp -o main-static
 
 clean:
