Bugfix: Install caption package
The latest pandoc image seems to be broken. To fix it we install the
caption package in the github action.

--- a/.github/workflows/create-pdfs-from-markdown.yml
+++ b/.github/workflows/create-pdfs-from-markdown.yml
@@ -16,6 +16,8 @@ jobs:
     steps:
       - name: Install bash
         run: apk add bash
+      - name: Quick fix (pandoc), install Latex package caption
+        run: tlmgr install caption
       - name: Checkout repository
         uses: actions/checkout@v2
       - name: Compile PDFs (slides)
