--- a/05_testing_and_ci/examples/automation/Dockerfile
+++ b/05_testing_and_ci/examples/automation/Dockerfile
@@ -1,24 +1,27 @@
 FROM alpine:3.15.0
 
-# Install Python and make sure that we can call it 
+# Install Python and make sure that we can call it
 # as `python` instead of `python3`
-RUN apk add --no-cache python3 \
+RUN apk add --no-cache python3 sudo \
     && ln -sf python3 /usr/bin/python
 
-# pip should be installed and used as a user. Therefore we 
+# pip should be installed and used as a user. Therefore we
 # create a new user "testuser" and change to this user.
-RUN addgroup -g 1000 testuser \
-    && adduser -u 1000 -G testuser -D testuser
-USER testuser
+ARG USER_NAME=testuser
+RUN addgroup -g 1000 $USER_NAME \
+    && adduser -u 1000 -G $USER_NAME -D $USER_NAME
+RUN echo "$USER_NAME" ALL=\(root\) NOPASSWD:ALL > "/etc/sudoers.d/$USER_NAME" && \
+    chmod 0440 "/etc/sudoers.d/$USER_NAME"
+USER $USER_NAME
 
 # Install pip, make sure it can be called as `pip` instead of
 # `pip3``. The installation location of `pip` has to be added
-# to the path. Afterwards, we can install missing tools via 
+# to the path. Afterwards, we can install missing tools via
 # `pip`.
-ENV PATH=/home/testuser/.local/bin:${PATH}
+ENV PATH=/home/$USER_NAME/.local/bin:${PATH}
 RUN python -m ensurepip --upgrade \
-    && ln -sf /home/testuser/.local/bin/pip3 /home/testuser/.local/bin/pip \
+    && ln -sf /home/$USER_NAME/.local/bin/pip3 /home/$USER_NAME/.local/bin/pip \
     && pip install --upgrade pip
 RUN pip install black
 
-ENTRYPOINT ["/bin/sh"]
+CMD ["/bin/sh"]
