Restrict pandoc/latex container version to 2

--- a/.github/workflows/create-pdfs-from-markdown.yml
+++ b/.github/workflows/create-pdfs-from-markdown.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   create_pdfs:
     runs-on: ubuntu-22.04
-    container: pandoc/latex:latest
+    container: pandoc/latex:2
     steps:
       - name: Install bash
         run: apk add bash
