--- a/.github/workflows/create-pdfs-from-markdown.yml
+++ b/.github/workflows/create-pdfs-from-markdown.yml
@@ -21,7 +21,8 @@ jobs:
       - name: Compile PDFs (slides)
         run: |
           ./scripts/create-pdf-from-markdown.sh slides
-      - uses: actions/upload-artifact@master
+      - name: Upload slides
+        uses: actions/upload-artifact@master
         with:
           name: slides
           path: slides
@@ -35,7 +36,8 @@ jobs:
       - name: Compile PDFs (demos)
         run: |
           ./scripts/create-pdf-from-markdown.sh demo
-      - uses: actions/upload-artifact@master
+      - name: Upload texts
+        uses: actions/upload-artifact@master
         with:
           name: texts
           path: texts
