Review Linux fundamentals demo

--- a/03_building_and_packaging/examples/environment-variables/Dockerfile
+++ b/03_building_and_packaging/examples/environment-variables/Dockerfile
@@ -1,14 +1,4 @@
-From ubuntu:22.04
-
-COPY inittimezone /usr/local/bin/inittimezone
-
-# Run inittimezone and install a few dependencies
-RUN apt-get -qq update && \
-    inittimezone && \
-    apt-get -qq -y install \
-        build-essential \
-        g++ \
-        vim
+FROM ubuntu:24.04
 
 ADD print_my_environment_variable.sh .
 CMD ["/bin/bash"]
