Rework tox and coverage

--- a/05_testing_and_ci/examples/python_testing/tox.toml
+++ b/05_testing_and_ci/examples/python_testing/tox.toml
@@ -1,7 +1,11 @@
 requires = ["tox>=4"]
-env_list = ["testing"]
+env_list = ["pytest_testing", "unittest"]
 
-[env.testing]
+[env.pytest_testing]
 description = "Run pytest"
 deps = ["pytest>=8"]
 commands = [["pytest"]]
+
+[env.unittest]
+description = "Run unittest"
+commands = [["python", "-m", "unittest", "test_operations_unittests"]]
